# CCPi-Reconstruction

./: CBbackproject_single_newgeom_c.c  CBproject_single_newgeom_c.c  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  algorithm  backproject_singledata.c  cgls_XTek_single.m  example.m  project_singledata.c  recon_gui.m  setup_linux.m  setup_windows.m
Avizo/: GNUmakefile.rules
CMake/: CCPiReconstructionConfig.cmake.in  CCPiReconstructionConfigVersion.cmake.in  FindAvizo.cmake  api.h.in  init.cpp.in
Code/fbp/: Makefile.newcuda  MatPar.cpp  bp_all.cpp  cone_gpu.cu  declarations.h  defs.h  gen_functions.cpp  message.cpp  ole2cd.cpp
Code/src/: CCPiConsoleUserInterface.h  CMakeLists.txt  Makefile  algorithms.hpp  allocator.hpp  cone.cpp  mpi.hpp  results.hpp  timer.cpp
Code/src/Algorithms/: tv_reg.cpp
Code/src/Readers/: XradiaReader.h
Core/: CMakeLists.txt
Core/fbp/: Makefile  Makefile.diamond  Makefile.emerald  allFDK.cpp  constants.h  diamond_cpp.cpp  flatDark.cpp  handlers.cpp  main.cpp  ringArtefacts.cpp  xrm2tif.cpp  xtiff.cpp
Core/src/: CCPiConsoleUserInterface.cpp  CCPiConsoleUserInterface.h  CCPiDefines.h  CCPiUserApplicationInterface.h  CMakeLists.txt  algorithms.hpp  allocator.hpp  blas.hpp  diamond.cpp  instruments.hpp  mpi.hpp  parallel.cpp  point.cpp  project_line.hpp  results.cpp  results.hpp  total_v.cpp  tv_core.cpp  ui_calls.cpp  voxels.cpp  voxels.hpp
Core/src/Algorithms/: cgls.hpp  mlem.hpp  sirt.hpp  tv_reg.hpp
Core/src/Readers/: XradiaReader.cpp  XradiaReader.h  nexus.hpp  pole.cpp  xtek.cpp
Matlab/: PBexample.m
Matlab/mex/: PBbackproject_single_newgeom_c.cpp  ui_calls.cpp
Matlab/tools/: load_data.m  scrollView.m  write_float.m
Qt/src/: CMakeLists.txt  ProgressWizardPage.cpp  ReconstructionWizardImpl.cpp
Wrappers/Avizo/: CMakeLists.txt  GNUmakefile.setroot
Wrappers/Avizo/src/: GNUmakefile  version.h
Wrappers/Avizo/src/CCPiReconstruction/: CCPiAvizoUserInterface.cpp  CCPiXradiaAvizoPrepareFilter.cpp  CCPiXradiaAvizoPrepareFilter.h  CCPiXradiaAvizoReader.cpp  CCPiXtekAvizoPrepareFilter.cpp  CCPiXtekAvizoPrepareFilter.h  CCPiXtekAvizoReader.cpp  CCPiXtekNoShiftReconstruction.cpp  CCPiXtekNoShiftReconstruction.h  Cone_Beam_recon.cpp  Cone_Beam_recon.h  GNUmakefile  NeXus_normalise.cpp  NeXus_normalise.h  Package  Parallel_Beam_recon.cpp  Parallel_Beam_recon.h  XTek_recon.cpp  XTek_recon.h  XtekReader.cpp  ui_messages.cpp  ui_messages.hpp  version.cpp
Wrappers/Avizo/src/CCPiReconstruction/doc/: NeXus_normalise.doc
Wrappers/Avizo/src/CCPiReconstruction/share/resources/: CCPiReconstruction.rc
Wrappers/Matlab/: recon2D.m  recon3D_TV.m  reconPhantomTest.m
Wrappers/Paraview/: CCPiParaviewUserInterface.cpp  CCPiParaviewUserInterface.h  CCPiReconstruction.xml  CCPiReconstructionParaviewImpl.cxx  CCPiReconstructionParaviewImpl.h  CMakeLists.txt
Wrappers/Paraview/test/: README.md  angles_creator.py  preprocess_data.py
Wrappers/Python/: CMakeLists.txt  Makefile  setup.py.in
Wrappers/Python/ccpi/reconstruction/: Reconstructor.py
Wrappers/Python/conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
Wrappers/Python/demo/: test_phantom_forward_backward.py
Wrappers/Python/test/: chadwick_reconstruct.py  test_conebeam.py  test_reconstructor_projector.py
Wrappers/python/: CMakeLists.txt  setup.py  setup.py.in
branches/alt_pbp/: reconPhantom.m
branches/bgs/: cgls_XTek_single.m  recon3D.m  recon_gui.m  setup_windows.m
branches/fbp/: setup_linux.m
branches/line3D/: recon3D.m  setup_windows.m
branches/parallel_bp/: setup_windows.m
branches/row-major/: setup_linux.m  setup_windows.m
c/: CBbackproject_single_newgeom_c.c  jacobs_rays.h  tools.h  tv_core.c  tv_core.h
fbp/: time_stamp.h
mex/: CBbackproject_single_newgeom_c.cpp  CBproject_single_newgeom_c.cpp  PBbackproject_single_newgeom_c.cpp  PBproject_single_newgeom_c.cpp  mex_types.hpp  tvreg_upn_c.cpp
mfc/: mfc.sln
mfc/mfc/: CGLSWizard.cpp  CGLSWizard.h  Initial_page.cpp  Initial_page.h  Load_page.h  MainFrm.cpp  MainFrm.h  Progress_page.cpp  mfc.cpp  mfc.rc  mfc.vcxproj  mfc.vcxproj.filters  resource.h  stdafx.h  ui_calls.cpp
opencl/: recon_gui.m  setup_linux.m
opencl/python/: Makefile  reconstruct.cpp  reconstruct.hpp
opencl/src/: Makefile  accel.cpp  accel.hpp  algorithms.hpp  allocator.hpp  c2D.cpp  cone.cpp  diamond.cpp  instruments.cpp  instruments.hpp  kernels.cl  mpi.cpp  p2D.cpp  parallel.cpp  recon.cpp  regularize.hpp  results.cpp  sirt.cpp  total_v.cpp  tv_core.cpp  ui_calls.cpp  ui_calls.hpp  utils.cpp  utils.hpp  voxels.cpp  voxels.hpp  xtek.cpp
python/: Makefile  ccpi_filters.cpp  ccpi_reconstruction.cpp  ccpi_wrapper.cpp  reconstruct.cpp  reconstruct.hpp  setup.py
python/ccpi/: instrument.py
python/conda-recipe/: bld.bat  build.sh  meta.yaml
python/src/: conebeam_module.cpp  conebeam_wrapper.cpp  conebeam_wrapper.hpp  diamond_module.cpp  diamond_wrapper.cpp  diamond_wrapper.hpp
python/test/: FindCenterOfRotation.py  chadwick_reconstruct.py  demo.py  sino.npy  (+4 more)
recipe/: conda_build_config.yaml
recipes/: build.sh  conda_build_config.yaml  meta.yaml
src/: Makefile  algorithms.hpp  allocator.hpp  base_types.hpp  blas.hpp  c2D.cpp  cgls.cpp  cgls.hpp  cone.cpp  cone_b.hpp  cone_f.hpp  diamond.cpp  fbp.cpp  fft.hpp  instruments.cpp  instruments.hpp  landweber.cpp  landweber.hpp  matrix2D.cpp  mlem.cpp  mlem.hpp  mpi.cpp  nexus.cpp  nexus.hpp  p2D.cpp  parallel.cpp  parallel_b.hpp  parallel_f.hpp  point.cpp  project_line.hpp  recon.cpp  results.cpp  results.hpp  sirt.cpp  sirt.hpp  tiff.cpp  tiff.hpp  tikhonov.cpp  timer.cpp  total_v.cpp  (+9 more)
tools/: CBproject_single.m  convert2D.m  create_PB_phantom.m  create_phantom.m  find_centre.m  input_recon_data.m  load_data.m  save_recon.m  tvreg_upn.m  write_float.m  write_tiff.m
trunk/: CBbackproject_single.m  CBbackproject_single_newgeom_c.c  CBproject_single_newgeom_c.c  backproject_singledata.c  cgls_XTek_single.m  load_data.m  project_singledata.c  recon3D.m  recon_gui.m  setup.m  setup_linux.m  setup_windows.m
trunk/Qt/src/: CMakeLists.txt  ReconstructionWizard.ui  UserInterfaceQT.cpp
(+378 files in other folders)
